// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField renders a Field 1`] = `
<div>
  <div
    class="sc-htpNat gdpVCF"
  >
    <div
      class="bp3-input-group sc-bxivhb eSUmfF"
    >
      <input
        class="bp3-input"
        name="field-name"
        style="padding-right: 10px;"
        type="text"
        value="text value"
      />
    </div>
  </div>
</div>
`;

exports[`FormField renders a Field with errors 1`] = `
<div>
  <div
    class="sc-htpNat gdpVCF"
  >
    <div
      class="bp3-input-group sc-bxivhb eSUmfF"
    >
      <input
        class="bp3-input"
        name="field-name"
        style="padding-right: 10px;"
        type="text"
        value=""
      />
    </div>
    <p
      class="sc-bdVaJa ldyxUR"
      data-testid="field-name-error"
    >
      Required
    </p>
  </div>
</div>
`;

exports[`FormField renders a numeric Field 1`] = `
<div>
  <div
    class="sc-htpNat gdpVCF"
  >
    <div
      class="bp3-control-group bp3-numeric-input sc-EHOje dCSDww"
    >
      <div
        class="bp3-input-group"
      >
        <input
          autocomplete="off"
          class="bp3-input"
          data-testid="testid"
          name="field-name"
          style="padding-right: 10px;"
          type="number"
          value="text value"
        />
      </div>
      <div
        class="bp3-button-group bp3-vertical bp3-fixed"
      >
        <button
          class="bp3-button"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-up"
            icon="chevron-up"
          >
            <svg
              data-icon="chevron-up"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-up
              </desc>
              <path
                d="M12.71 9.29l-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 001.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="bp3-button"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
